// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSearch found no search results 1`] = `
<div
  className="search-container"
>
  <div
    className="project-text-search"
  >
    <div
      className="header"
    >
      <SearchInput
        count={0}
        expanded={false}
        handleClose={[MockFunction]}
        hasPrefix={false}
        isLoading={false}
        onChange={[Function]}
        onHistoryScroll={[Function]}
        onKeyDown={[Function]}
        placeholder="Find in files…"
        query="foo"
        selectedItemId=""
        showClose={true}
        showErrorEmoji={true}
        size="big"
        summaryMsg="0 results"
      />
    </div>
    <div
      className="no-result-msg absolute-center"
    >
      No results found
    </div>
  </div>
</div>
`;

exports[`ProjectSearch found search results 1`] = `
<ProjectSearch
  activeSearch="project"
  clearSearch={[MockFunction]}
  closeProjectSearch={[MockFunction]}
  cx={
    Object {
      "navigateCounter": 0,
    }
  }
  doSearchForHighlight={[MockFunction]}
  query="match"
  results={
    Array [
      Object {
        "filepath": "testFilePath1",
        "matches": Array [
          Object {
            "column": 30,
            "match": "match1",
            "type": "MATCH",
            "value": "some thing match1",
          },
          Object {
            "column": 60,
            "match": "match2",
            "type": "MATCH",
            "value": "some thing match2",
          },
          Object {
            "column": 90,
            "match": "match3",
            "type": "MATCH",
            "value": "some thing match3",
          },
        ],
        "type": "RESULT",
      },
      Object {
        "filepath": "testFilePath2",
        "matches": Array [
          Object {
            "column": 80,
            "match": "match4",
            "type": "MATCH",
            "value": "some thing match4",
          },
          Object {
            "column": 40,
            "match": "match5",
            "type": "MATCH",
            "value": "some thing match5",
          },
        ],
        "type": "RESULT",
      },
    ]
  }
  searchSources={[MockFunction]}
  selectSpecificLocation={[MockFunction]}
  setActiveSearch={[MockFunction]}
  sources={Object {}}
  status="DONE"
  updateSearchStatus={[MockFunction]}
>
  <div
    className="search-container"
  >
    <div
      className="project-text-search"
    >
      <div
        className="header"
      >
        <SearchInput
          count={5}
          expanded={false}
          handleClose={[MockFunction]}
          hasPrefix={false}
          isLoading={false}
          onChange={[Function]}
          onHistoryScroll={[Function]}
          onKeyDown={[Function]}
          placeholder="Find in files…"
          query="match"
          selectedItemId=""
          showClose={true}
          showErrorEmoji={false}
          size="big"
          summaryMsg="5 results"
        >
          <div
            className="search-outline"
          >
            <div
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="result-list"
              className="search-field big"
              role="combobox"
            >
              <AccessibleImage
                className="search"
              >
                <span
                  className="img search"
                />
              </AccessibleImage>
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-controls="result-list"
                className=""
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Find in files…"
                spellCheck={false}
                value="match"
              />
              <div
                className="search-field-summary"
              >
                5 results
              </div>
              <CloseButton
                buttonClass="big"
                handleClick={[MockFunction]}
              >
                <button
                  className="close-btn big"
                  onClick={[MockFunction]}
                >
                  <AccessibleImage
                    className="close"
                  >
                    <span
                      className="img close"
                    />
                  </AccessibleImage>
                </button>
              </CloseButton>
            </div>
          </div>
        </SearchInput>
      </div>
      <ManagedTree
        autoExpandAll={true}
        autoExpandDepth={1}
        autoExpandNodeChildrenLimit={100}
        focused={null}
        getChildren={[Function]}
        getParent={[Function]}
        getPath={[Function]}
        getRoots={[Function]}
        itemHeight={24}
        onFocus={[Function]}
        renderItem={[Function]}
      >
        <div
          className="managed-tree"
        >
          <Tree
            autoExpandAll={true}
            autoExpandDepth={1}
            autoExpandNodeChildrenLimit={100}
            focused={null}
            getChildren={[Function]}
            getKey={[Function]}
            getParent={[Function]}
            getPath={[Function]}
            getRoots={[Function]}
            isExpanded={[Function]}
            itemHeight={24}
            onCollapse={[Function]}
            onExpand={[Function]}
            onFocus={[Function]}
            renderItem={[Function]}
          >
            <div
              aria-activedescendant={null}
              className="tree "
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              role="tree"
              style={Object {}}
              tabIndex="0"
            >
              <TreeNode
                active={false}
                depth={0}
                expanded={true}
                focused={false}
                id="undefined-$"
                index={0}
                isExpandable={true}
                item={
                  Object {
                    "filepath": "testFilePath1",
                    "matches": Array [
                      Object {
                        "column": 30,
                        "match": "match1",
                        "type": "MATCH",
                        "value": "some thing match1",
                      },
                      Object {
                        "column": 60,
                        "match": "match2",
                        "type": "MATCH",
                        "value": "some thing match2",
                      },
                      Object {
                        "column": 90,
                        "match": "match3",
                        "type": "MATCH",
                        "value": "some thing match3",
                      },
                    ],
                    "type": "RESULT",
                  }
                }
                key="undefined-$-inactive"
                onClick={[Function]}
                onCollapse={[Function]}
                onExpand={[Function]}
                renderItem={[Function]}
              >
                <div
                  aria-expanded={true}
                  aria-level={1}
                  className="tree-node"
                  data-expandable={true}
                  id="undefined-$"
                  onClick={[Function]}
                  onKeyDownCapture={null}
                  role="treeitem"
                >
                  <div
                    className="file-result"
                  >
                    <AccessibleImage
                      className="arrow expanded"
                    >
                      <span
                        className="img arrow expanded"
                      />
                    </AccessibleImage>
                    <AccessibleImage
                      className="file"
                    >
                      <span
                        className="img file"
                      />
                    </AccessibleImage>
                    <span
                      className="file-path"
                    />
                    <span
                      className="matches-summary"
                    >
                       (3 matches)
                    </span>
                  </div>
                </div>
              </TreeNode>
              <TreeNode
                active={false}
                depth={1}
                expanded={false}
                focused={false}
                id="undefined-undefined-30-1"
                index={1}
                isExpandable={false}
                item={
                  Object {
                    "column": 30,
                    "match": "match1",
                    "type": "MATCH",
                    "value": "some thing match1",
                  }
                }
                key="undefined-undefined-30-1-inactive"
                onClick={[Function]}
                onCollapse={[Function]}
                onExpand={[Function]}
                renderItem={[Function]}
              >
                <div
                  aria-level={2}
                  className="tree-node"
                  data-expandable={false}
                  id="undefined-undefined-30-1"
                  onClick={[Function]}
                  onKeyDownCapture={null}
                  role="treeitem"
                >
                  <span
                    className="tree-indent"
                  >
                    ​
                  </span>
                  <div
                    className="result"
                    onClick={[Function]}
                  >
                    <span
                      className="line-number"
                    />
                    <span
                      className="line-value"
                    >
                      <span
                        className="line-match"
                        key="0"
                      >
                        some thing match1
                      </span>
                      <span
                        className="query-match"
                        key="1"
                      >
                        some t
                      </span>
                      <span
                        className="line-match"
                        key="2"
                      >
                        some thing match1
                      </span>
                    </span>
                  </div>
                </div>
              </TreeNode>
              <TreeNode
                active={false}
                depth={1}
                expanded={false}
                focused={false}
                id="undefined-undefined-60-2"
                index={2}
                isExpandable={false}
                item={
                  Object {
                    "column": 60,
                    "match": "match2",
                    "type": "MATCH",
                    "value": "some thing match2",
                  }
                }
                key="undefined-undefined-60-2-inactive"
                onClick={[Function]}
                onCollapse={[Function]}
                onExpand={[Function]}
                renderItem={[Function]}
              >
                <div
                  aria-level={2}
                  className="tree-node"
                  data-expandable={false}
                  id="undefined-undefined-60-2"
                  onClick={[Function]}
                  onKeyDownCapture={null}
                  role="treeitem"
                >
                  <span
                    className="tree-indent"
                  >
                    ​
                  </span>
                  <div
                    className="result"
                    onClick={[Function]}
                  >
                    <span
                      className="line-number"
                    />
                    <span
                      className="line-value"
                    >
                      <span
                        className="line-match"
                        key="0"
                      >
                        some thing match2
                      </span>
                      <span
                        className="query-match"
                        key="1"
                      >
                        some t
                      </span>
                      <span
                        className="line-match"
                        key="2"
                      >
                        some thing match2
                      </span>
                    </span>
                  </div>
                </div>
              </TreeNode>
              <TreeNode
                active={false}
                depth={1}
                expanded={false}
                focused={false}
                id="undefined-undefined-90-3"
                index={3}
                isExpandable={false}
                item={
                  Object {
                    "column": 90,
                    "match": "match3",
                    "type": "MATCH",
                    "value": "some thing match3",
                  }
                }
                key="undefined-undefined-90-3-inactive"
                onClick={[Function]}
                onCollapse={[Function]}
                onExpand={[Function]}
                renderItem={[Function]}
              >
                <div
                  aria-level={2}
                  className="tree-node"
                  data-expandable={false}
                  id="undefined-undefined-90-3"
                  onClick={[Function]}
                  onKeyDownCapture={null}
                  role="treeitem"
                >
                  <span
                    className="tree-indent"
                  >
                    ​
                  </span>
                  <div
                    className="result"
                    onClick={[Function]}
                  >
                    <span
                      className="line-number"
                    />
                    <span
                      className="line-value"
                    >
                      <span
                        className="line-match"
                        key="0"
                      >
                        some thing match3
                      </span>
                      <span
                        className="query-match"
                        key="1"
                      >
                        some t
                      </span>
                      <span
                        className="line-match"
                        key="2"
                      >
                        some thing match3
                      </span>
                    </span>
                  </div>
                </div>
              </TreeNode>
              <TreeNode
                active={false}
                depth={0}
                expanded={true}
                focused={false}
                id="undefined-4"
                index={4}
                isExpandable={true}
                item={
                  Object {
                    "filepath": "testFilePath2",
                    "matches": Array [
                      Object {
                        "column": 80,
                        "match": "match4",
                        "type": "MATCH",
                        "value": "some thing match4",
                      },
                      Object {
                        "column": 40,
                        "match": "match5",
                        "type": "MATCH",
                        "value": "some thing match5",
                      },
                    ],
                    "type": "RESULT",
                  }
                }
                key="undefined-4-inactive"
                onClick={[Function]}
                onCollapse={[Function]}
                onExpand={[Function]}
                renderItem={[Function]}
              >
                <div
                  aria-expanded={true}
                  aria-level={1}
                  className="tree-node"
                  data-expandable={true}
                  id="undefined-4"
                  onClick={[Function]}
                  onKeyDownCapture={null}
                  role="treeitem"
                >
                  <div
                    className="file-result"
                  >
                    <AccessibleImage
                      className="arrow expanded"
                    >
                      <span
                        className="img arrow expanded"
                      />
                    </AccessibleImage>
                    <AccessibleImage
                      className="file"
                    >
                      <span
                        className="img file"
                      />
                    </AccessibleImage>
                    <span
                      className="file-path"
                    />
                    <span
                      className="matches-summary"
                    >
                       (2 matches)
                    </span>
                  </div>
                </div>
              </TreeNode>
              <TreeNode
                active={false}
                depth={1}
                expanded={false}
                focused={false}
                id="undefined-undefined-80-5"
                index={5}
                isExpandable={false}
                item={
                  Object {
                    "column": 80,
                    "match": "match4",
                    "type": "MATCH",
                    "value": "some thing match4",
                  }
                }
                key="undefined-undefined-80-5-inactive"
                onClick={[Function]}
                onCollapse={[Function]}
                onExpand={[Function]}
                renderItem={[Function]}
              >
                <div
                  aria-level={2}
                  className="tree-node"
                  data-expandable={false}
                  id="undefined-undefined-80-5"
                  onClick={[Function]}
                  onKeyDownCapture={null}
                  role="treeitem"
                >
                  <span
                    className="tree-indent"
                  >
                    ​
                  </span>
                  <div
                    className="result"
                    onClick={[Function]}
                  >
                    <span
                      className="line-number"
                    />
                    <span
                      className="line-value"
                    >
                      <span
                        className="line-match"
                        key="0"
                      >
                        some thing match4
                      </span>
                      <span
                        className="query-match"
                        key="1"
                      >
                        some t
                      </span>
                      <span
                        className="line-match"
                        key="2"
                      >
                        some thing match4
                      </span>
                    </span>
                  </div>
                </div>
              </TreeNode>
              <TreeNode
                active={false}
                depth={1}
                expanded={false}
                focused={false}
                id="undefined-undefined-40-6"
                index={6}
                isExpandable={false}
                item={
                  Object {
                    "column": 40,
                    "match": "match5",
                    "type": "MATCH",
                    "value": "some thing match5",
                  }
                }
                key="undefined-undefined-40-6-inactive"
                onClick={[Function]}
                onCollapse={[Function]}
                onExpand={[Function]}
                renderItem={[Function]}
              >
                <div
                  aria-level={2}
                  className="tree-node"
                  data-expandable={false}
                  id="undefined-undefined-40-6"
                  onClick={[Function]}
                  onKeyDownCapture={null}
                  role="treeitem"
                >
                  <span
                    className="tree-indent"
                  >
                    ​
                  </span>
                  <div
                    className="result"
                    onClick={[Function]}
                  >
                    <span
                      className="line-number"
                    />
                    <span
                      className="line-value"
                    >
                      <span
                        className="line-match"
                        key="0"
                      >
                        some thing match5
                      </span>
                      <span
                        className="query-match"
                        key="1"
                      >
                        some t
                      </span>
                      <span
                        className="line-match"
                        key="2"
                      >
                        some thing match5
                      </span>
                    </span>
                  </div>
                </div>
              </TreeNode>
            </div>
          </Tree>
        </div>
      </ManagedTree>
    </div>
  </div>
</ProjectSearch>
`;

exports[`ProjectSearch renders nothing when disabled 1`] = `""`;

exports[`ProjectSearch should display loading message while search is in progress 1`] = `
<div
  className="search-container"
>
  <div
    className="project-text-search"
  >
    <div
      className="header"
    >
      <SearchInput
        count={0}
        expanded={false}
        handleClose={[MockFunction]}
        hasPrefix={false}
        isLoading={true}
        onChange={[Function]}
        onHistoryScroll={[Function]}
        onKeyDown={[Function]}
        placeholder="Find in files…"
        query="match"
        selectedItemId=""
        showClose={true}
        showErrorEmoji={false}
        size="big"
        summaryMsg="0 results"
      />
    </div>
    <div
      className="no-result-msg absolute-center"
    >
      Loading…
    </div>
  </div>
</div>
`;

exports[`ProjectSearch showErrorEmoji false if not done & no results 1`] = `
<div
  className="search-container"
>
  <div
    className="project-text-search"
  >
    <div
      className="header"
    >
      <SearchInput
        count={0}
        expanded={false}
        handleClose={[MockFunction]}
        hasPrefix={false}
        isLoading={true}
        onChange={[Function]}
        onHistoryScroll={[Function]}
        onKeyDown={[Function]}
        placeholder="Find in files…"
        query="foo"
        selectedItemId=""
        showClose={true}
        showErrorEmoji={false}
        size="big"
        summaryMsg="0 results"
      />
    </div>
    <div
      className="no-result-msg absolute-center"
    >
      Loading…
    </div>
  </div>
</div>
`;

exports[`ProjectSearch showErrorEmoji false if not done & results 1`] = `
<div
  className="search-container"
>
  <div
    className="project-text-search"
  >
    <div
      className="header"
    >
      <SearchInput
        count={5}
        expanded={false}
        handleClose={[MockFunction]}
        hasPrefix={false}
        isLoading={true}
        onChange={[Function]}
        onHistoryScroll={[Function]}
        onKeyDown={[Function]}
        placeholder="Find in files…"
        query="foo"
        selectedItemId=""
        showClose={true}
        showErrorEmoji={false}
        size="big"
        summaryMsg="5 results"
      />
    </div>
    <ManagedTree
      autoExpandAll={true}
      autoExpandDepth={1}
      autoExpandNodeChildrenLimit={100}
      focused={null}
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      itemHeight={24}
      onFocus={[Function]}
      renderItem={[Function]}
    />
  </div>
</div>
`;

exports[`ProjectSearch turns off shortcuts on unmount 1`] = `
<div
  className="search-container"
>
  <div
    className="project-text-search"
  >
    <div
      className="header"
    >
      <SearchInput
        count={0}
        expanded={false}
        handleClose={[MockFunction]}
        hasPrefix={false}
        isLoading={false}
        onChange={[Function]}
        onHistoryScroll={[Function]}
        onKeyDown={[Function]}
        placeholder="Find in files…"
        query=""
        selectedItemId=""
        showClose={true}
        showErrorEmoji={true}
        size="big"
        summaryMsg=""
      />
    </div>
  </div>
</div>
`;

exports[`ProjectSearch where <Enter> has not been pressed 1`] = `
<div
  className="search-container"
>
  <div
    className="project-text-search"
  >
    <div
      className="header"
    >
      <SearchInput
        count={0}
        expanded={false}
        handleClose={[MockFunction]}
        hasPrefix={false}
        isLoading={false}
        onChange={[Function]}
        onHistoryScroll={[Function]}
        onKeyDown={[Function]}
        placeholder="Find in files…"
        query=""
        selectedItemId=""
        showClose={true}
        showErrorEmoji={true}
        size="big"
        summaryMsg=""
      />
    </div>
  </div>
</div>
`;
